# docs/swagger.yaml
@@ -2,7 +2,8 @@ basePath: /
 definitions:
   helper.BaseResponse:
     properties:
-      data: {}
+      data:
+        type: object
       message:
         type: string
       status:
@@ -62,6 +63,71 @@ paths:
           schema:
             $ref: '#/definitions/helper.BaseResponse'
       summary: Create a new Todo to the database
+      tags:
+      - Todos
+  /todos/{id}:
+    get:
+      consumes:
+      - application/json
+      description: get a todo with id from the database
+      parameters:
+      - description: ID of the todo
+        in: path
+        name: ID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.Todo'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.BaseResponse'
+      summary: get a todo for a given todo id.
+      tags:
+      - Todos
+    put:
+      consumes:
+      - application/json
+      description: Update the todo corresponding to the input id
+      parameters:
+      - description: update
+        in: body
+        name: todo
+        required: true
+        schema:
+          $ref: '#/definitions/model.TodoRequest'
+      - description: ID of the todo
+        in: path
+        name: ID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/helper.BaseResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/model.Todo'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.BaseResponse'
+      summary: Update todo with given todo id.
       tags:
       - Todos
 swagger: "2.0"
